# simulation-suite-j-majority

./: .gitignore  Cargo.toml  Justfile  README  README.md
.github/workflows/: coverage.yml
cli/: Cargo.toml  Justfile
cli/common/: Cargo.toml
cli/common/src/: lib.rs
cli/export/: Cargo.toml
cli/export/src/: args.rs  main.rs  plot.rs  util.rs
cli/export/src/plot/: entropy.rs  k.rs  mod.rs  n.rs  triangle.rs
cli/simulation/: Cargo.toml
cli/simulation/src/: agent.rs  args.rs  config.rs  error.rs  lib.rs  opinion_distribution.rs
cli/simulation_runner/: Cargo.toml
cli/simulation_runner/src/: args.rs  indicator.rs  main.rs
export/src/: util.rs
export/src/plot/: entropy_j.rs  entropy_k.rs  entropy_n.rs  k.rs  mod.rs  n.rs  triangle.rs
output/j-plot/: simulation.json
output/k-plot/: simulation.json
output/n-plot/: simulation.json
simulation/: Cargo.toml
simulation/simulation-cli/: Cargo.toml
simulation/simulation-cli/src/: agent.rs  config.rs  error.rs  main.rs  simulation.rs  ui.rs
simulation/src/: agent.rs  config.rs  entropy.rs  error.rs  export.rs  lib.rs  main.rs  opinion_distribution.rs  simulation.rs  ui.rs
simulation/src/schema/: agent.rs  config.rs  mod.rs  opinion_distribution.rs  simulation.rs
simulation/src/ui/: config.rs  mod.rs  simulation.rs
simulation_runner/: Cargo.toml
simulation_runner/output/indicator-test/: simulation.json
simulation_runner/src/: args.rs  main.rs
thesis/: .gitignore  Makefile  references.bib  thesis.cls  thesis.tex  watch.sh
tooling/: .gitignore  Justfile
tooling/common/src/: lib.rs
tooling/export/src/: args.rs  main.rs  util.rs
tooling/export/src/plot/: entropy.rs  j.rs  k.rs  mod.rs  n.rs  triangle.rs
tooling/simulation/: Cargo.toml
tooling/simulation/src/: config.rs  opinion_distribution.rs
