[package]
name = "simulation"
description = "Simulation tool for my bachelor thesis"
version = "0.1.0"
edition = "2021"
authors = ["Tom Groenwoldt <tom.groenwoldt@tuhh.de>"]

[dependencies]
eframe = "0.21.3"
egui = "0.21.0"
plot = "0.2.0"
rand = "0.8.5"
rstest = "0.17.0"
thiserror = "1.0.40"
tracing = "0.1.37"
