[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.171", features = ["derive"] }
thiserror = "1.0.43"
