[package]
name = "simulation_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.12", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
common = { version = "0.1.0", path = "../common" }
console = "0.15.7"
indicatif = "0.17.5"
itertools = "0.11.0"
serde_json = "1.0.103"
simulation = { path = "../simulation" }
